# til-25-2b3y

./: .gitmodules  Dockerfile  pyproject.toml  requirements-dev.txt
asr/: Dockerfile  README.md  download_model.py  requirements.txt  setup.py
asr/notebooks/: .gitignore  asr_parakeet.ipynb  train_parakeet.ipynb
asr/src/: asr_manager.py  asr_server.py  word_frequency.json  words.txt
cv/: .dockerignore  .gitignore  Dockerfile  compose.yml  mmdetection.Dockerfile  train.Dockerfile  val_annotations.json
cv/src/: cv_manager.py  cv_server.py  identity.py
finals/: docker-compose.yml  test.sh
ocr/: Dockerfile  README.md  requirements.txt  setup.py
ocr/src/: ocr_manager.py  ocr_server.py  ocr_word_frequency.json  word_frequency.json  words.txt
our-rl-solution/: README.md  decompose_tile.py  demo.py  dqn_demo.py  record_demo.py
our-rl-solution/agent/: episode.py  experience.py
our-rl-solution/grid/: README.md  __init__.py  map.py  node.py  trajectory.py  tree.py  utils.py  visualize.py
our-rl-solution/networks/: dqn.py  encoder.py  pomcp.py
our-rl-solution/trainer/: dqn.py
our-rl-solution/utils/: profiler.py  replay_buffer.py  state.py
rl/: Dockerfile  README.md  requirements.txt
rl/src/: .gitignore  README.md  README_DEMO.md  demo.py  episode_example.py  how-to-rl.ipynb  rl_manager.py  simple_demo.py  state_demo.py  usage_example.py
surprise/: Dockerfile  build.sh  requirements-dev.txt  requirements.txt  submit-surprise.sh  submit_to_finals.sh  test.py
surprise/src/: surprise_manager.py  surprise_server.py
test/: test_asr.py  test_rl.py
(+98 files in other folders)
